# Soil_Heavy_Metal_C_tiff

./: CMakeLists.txt  README.md  data_test.csv  main.cpp
include/gdal/: cpl_config.h  gdal_version.h
include/gdal/hdf4/: h4config.h
include/gdal/libxml/: xmlversion.h
include/gdal/openssl/: configuration.h
lib/: gdal_i.lib
